Fix bug where menu component overflowed

--- a/src/client/mensa/MensaBody.css
+++ b/src/client/mensa/MensaBody.css
@@ -8,6 +8,8 @@
   .row-one-title {
     display: flex;
     justify-content: center;
+    max-width: calc(100dvw - 20px);
+    text-wrap: wrap;
 
     .mark-as-favorite-menu {
       display: flex;
@@ -18,6 +20,9 @@
 
     & h2 {
       color: #000000;
+      @media (max-width: 375px) {
+        font-size: 1.3em;
+      }
     }
   }
 
@@ -34,9 +39,8 @@
     margin-right: 10px;
     flex: 1; /* Ensures that the container stretches to fill the screen */
     justify-content: space-between;
-    min-width: calc(
-      100vw - 20px
-    ); /* Ensures that the container stretches to fill the screen */
+    min-width: calc(100dvw - 20px);
+    max-width: calc(100dvw - 20px);
 
     & .menu-component {
       padding: 15px;
@@ -53,9 +57,16 @@
         justify-content: space-between;
         margin: 0; /* Reset margin */
         padding: 0; /* Reset padding */
+        max-width: calc(100dvw - 20px - 20px);
 
         & .menu-title {
-          padding-right: 30px;
+          padding-right: 20px;
+        }
+
+        & .menu-price {
+          text-wrap: wrap;
+          font-size: 0.8em;
+          padding-top: 4px;
         }
       }
 
